# rust-mnist

./: Cargo.toml  README.md
models/: 784,100,10-2025-02-08-0.94.json  784,100,100,10-2025-02-08-0.98.json  784,30,10-2025-02-07.json  784,30,10-2025-02-08-0.56.json  784,30,10-2025-02-08-0.93.json
src/: main.rs  web.rs
web/: index.html
