[package]
name = "rust-mnist"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
mnist = "0.6.0"
ndarray = { version = "0.15", features = ["serde", "blas"] }
blas-src = { version = "0.10", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
ndarray-rand = "0.14"
rand = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.137"
